--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -35,7 +35,7 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
+            android:layout_margin="@dimen/test"
             app:cardCornerRadius="5dp">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -55,6 +55,7 @@
                         android:layout_gravity="center"
                         android:layout_margin="5dp"/>
                     <androidx.appcompat.widget.SwitchCompat
+                        android:checked="true"
                         android:id="@+id/checkButton"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -77,7 +78,7 @@
                         android:layout_gravity="center"
                         />
                     <Spinner
-                        android:id="@+id/autoCompleteTextView"
+                        android:id="@+id/spinner"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:inputType="none"/>
