--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools">
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
         android:background="@color/grey"
         tools:context=".fragment.SettingFragment">
@@ -54,11 +55,12 @@
                         android:textSize="16sp"
                         android:layout_gravity="center"
                         android:layout_margin="5dp"/>
-                    <androidx.appcompat.widget.SwitchCompat
+                    <com.google.android.material.switchmaterial.SwitchMaterial
                         android:checked="true"
                         android:id="@+id/checkButton"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        style="@style/Widget.Material3.CompoundButton.Switch"
                         android:layout_margin="5dp"
                         tools:ignore="InvalidId" />
                 </LinearLayout>
@@ -75,13 +77,19 @@
                         android:textSize="16sp"
                         android:textColor="@color/black"
                         android:layout_marginStart="5dp"
-                        android:layout_gravity="center"
                         />
-                    <Spinner
-                        android:id="@+id/spinner"
-                        android:layout_width="wrap_content"
+
+                    <TextView
+                        android:id="@+id/buttonPopUp"
+                        android:layout_width="150dp"
                         android:layout_height="wrap_content"
-                        android:inputType="none"/>
+                        android:layout_marginStart="5dp"
+                        android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
+                        android:text="@string/medium"
+                        android:textSize="16sp"
+                        android:textColor="@color/black"
+                        android:textAlignment="textEnd"
+                        tools:ignore="UseCompatTextViewDrawableXml" />
                 </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
