--- a/app/src/main/res/layout/item_list_button_size.xml
+++ b/app/src/main/res/layout/item_list_button_size.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:padding="16dp"
+    android:textAlignment="textEnd"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/app_name"
     android:textSize="16sp"
+    android:textColor="@color/black"
     />
