--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="large">120dp</dimen>
     <dimen name="medium">80dp</dimen>
     <dimen name="small">60dp</dimen>
+    <dimen name="heightSwitchCompat">20</dimen>
+    <dimen name="widthSwitchCompat">20</dimen>
 </resources>
